k8s/03-gateway/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-ingress
  namespace: kafka
  annotations:
    konghq.com/plugins: jwt-auth, rate-limit, cors-plugin
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
  - host: producer.192.168.49.2.nip.io
    http:
      paths:
        - path: /event
          pathType: Prefix
          backend:
            service:
              name: producer-service
              port:
                number: 5000
